app/assets/stylesheets/core.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require reset
 *= require_self
 */

html {	weight: 100%; height: 100%; position: relative;}
body {	letter-spacing: 2px; font-family: "proxima-nova-extra-condensed", sans-serif; font-weight: 600; font-style: normal; height: 100%; width: 100%; overflow: hidden;}
body * {  box-sizing: border-box;}
*:focus { border: 0;  outline:none;}
.orange {	color: #ff4f2c;}
#home {	text-align: center; }
#home h2 {	font-size: 72px;  text-transform: uppercase; color: white;text-shadow: 1.5px 2.598px 3px rgba(0, 0, 0, 0.35);margin-bottom: 10px;}
#home p {	text-transform: uppercase; font-size: 32px;text-shadow: 1px 1.732px 2px rgba(0, 0, 0, 0.81);}
.bg-video{	height: 100%; position: relative; width: 100%;}
.video-wrapper {	z-index: -5; position: absolute; overflow-x: hidden; left: 0; bottom: 0;}
video {	height: 100%; width: auto;}
.home-wrapper {	width: 940px; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%);}

#home img.logo {	margin-bottom: 60px;}
.form-wrap {	margin-top: 45px;}
input[type="text"] {	padding :19px 15px 15px;font-size: 20px; color: rgb(82, 82, 82);appearance: none; -webkit-appearance: none; -moz-appearance: none; border: 0; border-radius: 5px; margin-right: 10px;}
input[type="submit"] {	appearance: none; -webkit-appearance: none; -moz-appearance: none; background-color: #ff4f2c; border-radius: 0; border :0; padding :19px 15px 15px;font-size: 20px; color : white; text-transform: uppercase; border-radius: 5px; cursor: pointer;}
input[type="submit"]:hover {	background-color: white; color: #ff4f2c;;}

.hero {background: url('referral-header.jpg') no-repeat; background-size: cover;  background-position-x: 30%;}

#refer .wrapper-cont {	width: 90%; margin: 0 auto; padding:45px 0 75px;}
#refer .wrapper-cont .tagline {	width: 54%;display: inline-block; vertical-align: top;  text-align: center;color: rgb(70, 80, 26); font-size: 45px; text-transform: uppercase;text-shadow: 0.5px 0.866px 0px rgba(0, 0, 0, 0.41);}
#refer .wrapper-cont .tagline p {color: white; font-size: 45px; text-transform: uppercase;text-shadow: 0.5px 0.866px 0px rgba(0, 0, 0, 0.41); max-width: 415px; margin: 0 auto;}
#refer .wrapper-cont .cont {	width: 45%;display: inline-block; vertical-align: top; text-align: left;}
#refer img.logo {	margin-bottom: 30px;}
#refer img.logo.mobile {	margin: 0 auto 30px;}
#refer h2 {	font-size: 50px; text-transform: uppercase;}
#refer h3 {	font-size: 36px; text-transform: uppercase; color: white;}
#refer .cont p {	font-size: 20px;color: white; margin: 20px 0; }
.referral-link {	color: rgb(95, 95, 95);font-family: 'proxima-nova'; font-style: normal; font-weight: 400; font-size: 18px; background: white; border-radius: 5px; padding :15px; max-width: 500px; width: 100%; text-align: left; margin-bottom :20px;}
.referral-link span::selection {	background: #FF9580;}
.social-links {	  text-align: center;width: 100%;max-width: 500px;}
.social-links a {	margin-right: 10px; width: 46px; height: 46px; display: inline-block; vertical-align: top; position: relative; border-radius: 5px;}
.social-links .fb {	background: #36589d;}
.social-links .twit {	background: #00b9ef;}
.social-links img {	position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%); -moz-transform: translate(-50%, -50%);}
#refer .mobile {	display: none;}

#refer .wrapper-cont.friend-count {	text-align: center;color: #46501a;text-transform: uppercase;}
#refer .wrapper-cont.friend-count p:first-child {	font-size: 32px;  margin-bottom: 0;}
#refer .wrapper-cont.friend-count p:nth-child(2) {	font-size: 26px; margin-top: 0;}
#refer .wrapper-cont.friend-count span {	color: #ff4f2c;;}

#refer .prizes {	width: 112%;}
#refer .prizes .wrapper-cont {	position: relative; padding-top: 0;}
#refer .prizes .progress{height: 4px;width: 100%;/*background: url(/assets/refer/progress-bg.png) 0 0 repeat-x;*/background-size: 1px 4px;position: absolute;top: 100px;z-index: 0;}
/*#refer .prizes .progress .mover {	position: absolute; top: 0; left: 0;}
#refer .prizes .progress .mover .bar {	width: 165px; height: 4px; background-size: 1px 4px;}*/

#refer .prize-one .labels .thermometer{background-image:linear-gradient(to right,#ff4f2c 26%,#d9d4ca 26%);}
#refer .prize-two .labels .thermometer{background-image:linear-gradient(to right,#ff4f2c 42%,#d9d4ca 42%);}
#refer .prize-three .labels .thermometer{ background-image:linear-gradient(to right,#ff4f2c 62%,#d9d4ca  62%); }
#refer .prize-four .labels .thermometer{ background-image:linear-gradient(to right,#ff4f2c 82%,#d9d4ca  82%); }
#refer .first .labels .thermometer{background-image:linear-gradient(to right,#ff4f2c 10%,#d9d4ca 17%);}
#refer .second .labels .thermometer{background-image:linear-gradient(to right,#ff4f2c 35%,#d9d4ca 43%)}
#refer .third .labels .thermometer{background-image:linear-gradient(to right,#ff4f2c 55%,#d9d4ca 69%)}
#refer .fourth .labels .thermometer{background-image:linear-gradient(to right,#ff4f2c 77%,#d9d4ca 94%)}


#refer .products {	width: 84%; margin-left: 12%; padding-top: 46px;}
#refer .prizes .products li {	display: inline-block; width: 24%;vertical-align: top; position: relative;  padding-top: 193px; margin-top: -197px;}
#refer .products p {	color: #888378; text-transform: uppercase;font-size: 18px; text-align: center;}
#refer .products p span {	font-size: 15px;}
#refer .prizes .products li.product .circle{border: 0;height: 50px;width: 50px;border-radius: 30px;border: 1px solid #DAD9D2;text-align: center;line-height: 50px;color: #807a6e;overflow: hidden;background: #d9d4ca;margin: 0 auto; font-size: 25px; cursor: pointer}
#refer .prizes .products li.product.selected .circle {	background: #ff4f2c; color: white; border: 0;}
#refer .prizes .products li.product .tooltip {	display: none; position: absolute; top: 0; left: 50%; transform: translate(-50%, 0); -webkit-transform: translate(-50%, 0); -moz-transform: translate(-50%, 0); width: 187px;}
#refer .prizes .products li.product:hover .tooltip{display: block;}
#refer .prizes .products li.product .tooltip img {	border: 4px solid  #ff4f2c; width: 100%; height: auto;}

#refer .labels .thermometer {  width: 84%;height: 10px;background: #d9d4ca;border-radius: 20px;}


#refer .labels {	position: absolute;left: 0;top: 0; width: 100%; z-index: -5;}
#refer .labels p{	color: #888378; text-transform: uppercase;font-size: 22px; display: block;}

#refer .detail.wrapper-cont {	font-weight: 400;font-size: 14px;font-size: 14px;font-family: "Proxima Nova";color: rgb(74, 74, 74); margin-top: 60px;padding-bottom: 20px;}

footer { font-size: 14px;	color: rgba(135, 129, 117, 0.4); text-transform: uppercase; background-color: #f0eeea; padding: 10px 0; padding-left: 5%;}

/*TABLET*/
@media screen and (max-width:1090px) {
	.home-wrapper {	width: 490px;}
	#home h2 {	font-size: 65px; line-height: 60px;}
	.hero {	background: url('referral-header-mobile.jpg') no-repeat; background-size: cover;}
	#refer .wrapper-cont {	width: 95%; padding-top: 50; padding: 50px 0;}
	#refer .wrapper-cont .cont {	width: 100%; margin-left: auto; text-align: center; padding-top: 30px;}
	.hero {	position: relative;}
	#refer .wrapper-cont .tagline {	position: absolute; top: 0; width: 100%; color :white; background-color: rgb(70, 80, 26); left: 0; margin-top: 0; padding: 10px;}
	#refer .wrapper-cont .tagline p {	max-width: initial; font-size: 30px;}
	.referral-link {	margin: 0 auto 20px;}
	.social-links{	text-align: center; margin: 0 auto 20px;}
	#refer .prizes {	width: 100%;}
	#refer .labels p {	display: none;}
	#refer .labels .thermometer {	width: 10px; height: 700px; margin: 0 auto;}
	#refer .prize-one .labels .thermometer{background-image:linear-gradient(to bottom,#ff4f2c 26%,#d9d4ca 26%);}
	#refer .prize-two .labels .thermometer{background-image:linear-gradient(to bottom,#ff4f2c 42%,#d9d4ca 42%);}
	#refer .prize-three .labels .thermometer{ background-image:linear-gradient(to bottom,#ff4f2c 62%,#d9d4ca  62%); }
	#refer .prize-four .labels .thermometer{ background-image:linear-gradient(to bottom,#ff4f2c 82%,#d9d4ca  82%); }
	#refer .first .labels .thermometer{background-image:linear-gradient(to bottom,#ff4f2c 10%,#d9d4ca 17%);}
	#refer .second .labels .thermometer{background-image:linear-gradient(to bottom,#ff4f2c 29%,#d9d4ca 38%)}
	#refer .third .labels .thermometer{background-image:linear-gradient(to bottom,#ff4f2c 50%,#d9d4ca 64%)}
	#refer .fourth .labels .thermometer{background-image:linear-gradient(to bottom,#ff4f2c 72%,#d9d4ca 90%)}
	#refer .products {	margin: 0 auto; padding-top: 0;}
	#refer .prizes .products li {	width: 100%; max-width: 350px;display: block; margin: 0 auto; padding-top: 130px; text-align: left;}
	#refer .prizes .products li:nth-child(2n+1) p {	position: absolute;left: 215px; top: 125px;}
	#refer .prizes .products li:nth-child(2n) p {	position: absolute; right: 215px; top: 125px;}
	#refer .prizes .products li.product:hover .tooltip {	display: none;}
	#refer .detail.wrapper-cont {	text-align: center;}
}
@media screen and (max-width:600px) {
	.home-wrapper {	width: 90%; max-width: 370px;}
	#home h2 {	font-size: 48px; line-height: 45px; }
	#home p {	font-size: 28px;}
	input[type="text"] {	margin-right: 0; margin-bottom: 10px;}
	form, form input {	width: 100%; margin: 0;}
	#refer .wrapper-cont .cont {	padding-top: 60px;}
	#refer .mobile {	display: block;}
	#refer .desktop {	display: none;}
	.social-links {	text-align: left;}
	.social-links a {	width: 48%;}
	.social-links a.twit {	float: right; margin-right: 0;}
	
}



#refer .prizes p.place{
	text-align: center;
	font-size: 16px;
	color: #074E6F;
	width: 100%;
	font-weight: 500;
	margin-top: 30px;
}

#refer .prizes p.place span{
	color: #995F5E;
}

#refer .prizes p.check{
	text-align: center;
	font-size: 16px;
	color: #858181;
	width: 100%;
	font-weight: 500;
	margin-top: 5px;
}

